--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Task Manager | Home Page</title>
+	<style>
+		body {
+			background-color: black;
+		}
+	</style>
 </head>
 
 <body>
-	<h1>Hello World</h1>
+	<h1>Running...</h1>
 </body>
 
 </html>
