--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="">
 
 <head>
 	<meta charset="UTF-8">
@@ -8,127 +8,113 @@
 </head>
 
 <body>
-	<div class="side-bar">
-		<div class="side-top">
-			<div class="side-top-left">
-				<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 48 48">
-					<path fill="#185abd"
-						d="M24.48,29.316l-9.505,9.505L1.588,25.434c-0.784-0.784-0.784-2.054,0-2.838l6.667-6.667	c0.784-0.784,2.054-0.784,2.838,0L24.48,29.316z">
-					</path>
-					<linearGradient id="5qKAcydctVb3hkGT27jhwa_HpPqCqynotVp_gr1" x1="14.572" x2="43.188" y1="38.199"
-						y2="9.583" gradientUnits="userSpaceOnUse">
-						<stop offset="0" stop-color="#4191fd"></stop>
-						<stop offset="1" stop-color="#55acfd"></stop>
-					</linearGradient>
-					<path fill="url(#5qKAcydctVb3hkGT27jhwa_HpPqCqynotVp_gr1)"
-						d="M17.797,41.642l-6.667-6.667c-0.784-0.784-0.784-2.054,0-2.838L36.907,6.358	c0.784-0.784,2.054-0.784,2.838,0l6.667,6.667c0.784,0.784,0.784,2.054,0,2.838L20.634,41.642	C19.851,42.425,18.58,42.425,17.797,41.642z">
-					</path>
-				</svg>
-				<span class="top2px">TASK</span>
-			</div>
-			<div class="side-top-right">
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#e8eaed">
-					<path
-						d="m387.69-100-15.23-121.85q-16.07-5.38-32.96-15.07-16.88-9.7-30.19-20.77L196.46-210l-92.3-160 97.61-73.77q-1.38-8.92-1.96-17.92-.58-9-.58-17.93 0-8.53.58-17.34t1.96-19.27L104.16-590l92.3-159.23 112.46 47.31q14.47-11.46 30.89-20.96t32.27-15.27L387.69-860h184.62l15.23 122.23q18 6.54 32.57 15.27 14.58 8.73 29.43 20.58l114-47.31L855.84-590l-99.15 74.92q2.15 9.69 2.35 18.12.19 8.42.19 16.96 0 8.15-.39 16.58-.38 8.42-2.76 19.27L854.46-370l-92.31 160-112.61-48.08q-14.85 11.85-30.31 20.96-15.46 9.12-31.69 14.89L572.31-100H387.69ZM440-160h78.62L533-267.15q30.62-8 55.96-22.73 25.35-14.74 48.89-37.89L737.23-286l39.39-68-86.77-65.38q5-15.54 6.8-30.47 1.81-14.92 1.81-30.15 0-15.62-1.81-30.15-1.8-14.54-6.8-29.7L777.38-606 738-674l-100.54 42.38q-20.08-21.46-48.11-37.92-28.04-16.46-56.73-23.31L520-800h-79.38l-13.24 106.77q-30.61 7.23-56.53 22.15-25.93 14.93-49.47 38.46L222-674l-39.38 68L269-541.62q-5 14.24-7 29.62t-2 32.38q0 15.62 2 30.62 2 15 6.62 29.62l-86 65.38L222-286l99-42q22.77 23.38 48.69 38.31 25.93 14.92 57.31 22.92L440-160Zm40.46-200q49.92 0 84.96-35.04 35.04-35.04 35.04-84.96 0-49.92-35.04-84.96Q530.38-600 480.46-600q-50.54 0-85.27 35.04T360.46-480q0 49.92 34.73 84.96Q429.92-360 480.46-360ZM480-480Z">
-					</path>
-				</svg>
-
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#e8eaed">
-					<path
-						d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm120-80v-560H200v560h120Zm80 0h360v-560H400v560Zm-80 0H200h120Z">
-					</path>
-				</svg>
-			</div>
+	<div class="side-bar"></div>
+	<div class="main-content">
+		<div class="main-head">
+			<h1 class="top2px">All Tasks</h1>
+			<button>Theme Toggle</button>
 		</div>
-		<div class="side-middle">
-			<button class="side-row">
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#e8eaed">
-					<path
-						d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z">
-					</path>
-				</svg>
-				<span class="top2px">Add Task</span>
-			</button>
-			<button class="side-row tab">
-				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none viewBox=" 0 0 24 24"
-					aria-hidden="true">
-					<path fill="" fill-rule="evenodd"
-						d="M8.062 4h7.876a2 2 0 0 1 1.94 1.515l2.062 8.246q.06.24.06.486V18a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-3.754a2 2 0 0 1 .06-.485L6.12 5.515A2 2 0 0 1 8.061 4m0 1a1 1 0 0 0-.97.758L5.03 14.004a1 1 0 0 0-.03.242V18a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-3.754a1 1 0 0 0-.03-.242L16.91 5.758a1 1 0 0 0-.97-.758zm6.643 10a2.75 2.75 0 0 1-5.41 0H7a.5.5 0 1 1 0-1h2.75a.5.5 0 0 1 .5.5 1.75 1.75 0 1 0 3.5 0 .5.5 0 0 1 .5-.5H17a.5.5 0 0 1 0 1z"
-						clip-rule="evenodd"></path>
-				</svg>
-				<span class="top2px">Inbox</span>
-			</button>
-			<button class="side-row tab">
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#8b5cf6">
-					<path
-						d="M360-335.38q-35.08 0-59.85-24.77-24.77-24.77-24.77-59.85t24.77-59.85q24.77-24.77 59.85-24.77t59.85 24.77q24.77 24.77 24.77 59.85t-24.77 59.85q-24.77 24.77-59.85 24.77ZM224.62-120q-27.62 0-46.12-18.5Q160-157 160-184.62v-510.76q0-27.62 18.5-46.12Q197-760 224.62-760h70.76v-89.23h43.08V-760h286.16v-89.23h40V-760h70.76q27.62 0 46.12 18.5Q800-723 800-695.38v510.76q0 27.62-18.5 46.12Q763-120 735.38-120H224.62Zm0-40h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-350.76H200v350.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69Z">
-					</path>
-				</svg>
-				<span class="top2px">Today</span>
-			</button>
-			<button class="side-row tab">
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#e8eaed">
-					<path
-						d="M680.36-132.31q-45.02 0-76.54-31.51-31.51-31.52-31.51-76.54 0-45.02 31.51-76.18 31.52-31.15 76.54-31.15 45.02 0 76.18 31.15 31.15 31.16 31.15 76.18 0 45.02-31.15 76.54-31.16 31.51-76.18 31.51Zm-18.05-264.61v-70.77h35.38v70.77h-35.38Zm0 384.61v-70.77h35.38v70.77h-35.38Zm141.92-326.84-25.31-25.08L829-414.31 854.08-389l-49.85 49.85ZM531.77-66.69 506.69-91l50.08-50.85 25.08 25.08-50.08 50.08Zm305.15-155.62v-35.38h70.77v35.38h-70.77Zm-384.61 0v-35.38h70.77v35.38h-70.77ZM829-66.69l-49.85-50.08 25.08-25.08L854.31-92 829-66.69ZM556.54-338.92 506.69-389l25.08-25.08 50.08 49.85-25.31 25.31ZM224.62-120q-27.62 0-46.12-18.5Q160-157 160-184.62v-510.76q0-27.62 18.5-46.12Q197-760 224.62-760h70.76v-89.23h43.08V-760h286.16v-89.23h40V-760h70.76q27.62 0 46.12 18.5Q800-723 800-695.38v160H200v350.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h160v40h-160Z">
-					</path>
-				</svg>
-				<span class="top2px">Tomorrow</span>
-			</button>
-			<button class="side-row tab">
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#e8eaed">
-					<path
-						d="M320-404.62q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.57 0-12.39 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.58 0 12.38-9.19 21.57-9.2 9.19-21.58 9.19Zm160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.57 0-12.39 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.58 0 12.38-9.19 21.57-9.2 9.19-21.58 9.19Zm160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.57 0-12.39 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.58 0 12.38-9.19 21.57-9.2 9.19-21.58 9.19ZM224.62-120q-27.62 0-46.12-18.5Q160-157 160-184.62v-510.76q0-27.62 18.5-46.12Q197-760 224.62-760h70.76v-89.23h43.08V-760h286.16v-89.23h40V-760h70.76q27.62 0 46.12 18.5Q800-723 800-695.38v510.76q0 27.62-18.5 46.12Q763-120 735.38-120H224.62Zm0-40h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-350.76H200v350.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69Z">
-					</path>
-				</svg>
-				<span class="top2px">Week</span>
-			</button>
-			<button class="side-row tab">
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#e8eaed">
-					<path
-						d="M410-120v-238L204-239l-70-121 206-120-206-119 70-121 206 119v-239h140v239l206-119 70 121-206 119 206 120-70 121-206-119v238H410Z">
-					</path>
-				</svg>
-				<span class="top2px">All</span>
-			</button>
-			<button class="side-row tab">
-				<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-					fill="#c4b5fd">
-					<path
-						d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q65 0 123 19t107 53l-58 59q-38-24-81-37.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-18-2-36t-6-35l65-65q11 32 17 66t6 70q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm-56-216L254-466l56-56 114 114 400-401 56 56-456 457Z" />
-				</svg>
-				<span class="top2px">Completed Tasks</span>
-			</button>
-		</div>
-		<hr>
-		<div class="side-bottom">
-			<div class="side-bottom-head">
-				<span class="side-bottom-right">My Projects</span>
-				<div class="side-bottom-left">
-					<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-						fill="#e8eaed">
-						<path d="M450-450H220v-60h230v-230h60v230h230v60H510v230h-60v-230Z"></path>
-					</svg>
-					<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-						fill="#e8eaed">
-						<path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"></path>
-					</svg>
+		<div class="task-list">
+			<div class="task">
+				<div class="task-head">
+					<div class="task-head-left">
+						<input type="checkbox">
+						<div class="title">Instructions</div>
+					</div>
+					<div class="task-head-right">
+						<div>Urgent</div>
+						<div>5 June 2025</div>
+					</div>
+				</div>
+				<div class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
+				</div>
+				<div class="task-bottom">
+					<div class="task-options">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M200-200h43.92l427.93-427.92-43.93-43.93L200-243.92V-200Zm-40 40v-100.77l527.23-527.77q6.15-5.48 13.57-8.47 7.43-2.99 15.49-2.99t15.62 2.54q7.55 2.54 13.94 9.15l42.69 42.93q6.61 6.38 9.04 14 2.42 7.63 2.42 15.25 0 8.13-2.74 15.56-2.74 7.42-8.72 13.57L260.77-160H160Zm600.77-556.31-44.46-44.46 44.46 44.46ZM649.5-649.5l-21.58-22.35 43.93 43.93-22.35-21.58Z">
+							</path>
+						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M304.62-160q-26.85 0-45.74-18.88Q240-197.77 240-224.62V-720h-40v-40h160v-30.77h240V-760h160v40h-40v495.38q0 27.62-18.5 46.12Q683-160 655.38-160H304.62ZM680-720H280v495.38q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h350.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93V-720ZM392.31-280h40v-360h-40v360Zm135.38 0h40v-360h-40v360ZM280-720v520-520Z">
+							</path>
+						</svg>
+					</div>
+					<div class="task-project"># Inbox</div>
 				</div>
 			</div>
-			<div class="projects">
-				<button class="side-row tab"># Chore</button>
-				<button class="side-row tab"># Study</button>
-				<button class="side-row tab"># Gym</button>
+			<div class="line"></div>
+			<div class="task">
+				<div class="task-head">
+					<div class="task-head-left">
+						<input type="checkbox">
+						<div class="title">Instructions</div>
+					</div>
+					<div class="task-head-right">
+						<div>Urgent</div>
+						<div>5 June 2025</div>
+					</div>
+				</div>
+				<div class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
+				</div>
+				<div class="task-bottom">
+					<div class="task-options">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M200-200h43.92l427.93-427.92-43.93-43.93L200-243.92V-200Zm-40 40v-100.77l527.23-527.77q6.15-5.48 13.57-8.47 7.43-2.99 15.49-2.99t15.62 2.54q7.55 2.54 13.94 9.15l42.69 42.93q6.61 6.38 9.04 14 2.42 7.63 2.42 15.25 0 8.13-2.74 15.56-2.74 7.42-8.72 13.57L260.77-160H160Zm600.77-556.31-44.46-44.46 44.46 44.46ZM649.5-649.5l-21.58-22.35 43.93 43.93-22.35-21.58Z">
+							</path>
+						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M304.62-160q-26.85 0-45.74-18.88Q240-197.77 240-224.62V-720h-40v-40h160v-30.77h240V-760h160v40h-40v495.38q0 27.62-18.5 46.12Q683-160 655.38-160H304.62ZM680-720H280v495.38q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h350.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93V-720ZM392.31-280h40v-360h-40v360Zm135.38 0h40v-360h-40v360ZM280-720v520-520Z">
+							</path>
+						</svg>
+					</div>
+					<div class="task-project"># Inbox</div>
+				</div>
 			</div>
+			<div class="line"></div>
+			<div class="task">
+				<div class="task-head">
+					<div class="task-head-left">
+						<input type="checkbox">
+						<div class="title">Instructions</div>
+					</div>
+					<div class="task-head-right">
+						<div>Urgent</div>
+						<div>5 June 2025</div>
+					</div>
+				</div>
+				<div class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
+				</div>
+				<div class="task-bottom">
+					<div class="task-options">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M200-200h43.92l427.93-427.92-43.93-43.93L200-243.92V-200Zm-40 40v-100.77l527.23-527.77q6.15-5.48 13.57-8.47 7.43-2.99 15.49-2.99t15.62 2.54q7.55 2.54 13.94 9.15l42.69 42.93q6.61 6.38 9.04 14 2.42 7.63 2.42 15.25 0 8.13-2.74 15.56-2.74 7.42-8.72 13.57L260.77-160H160Zm600.77-556.31-44.46-44.46 44.46 44.46ZM649.5-649.5l-21.58-22.35 43.93 43.93-22.35-21.58Z">
+							</path>
+						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M304.62-160q-26.85 0-45.74-18.88Q240-197.77 240-224.62V-720h-40v-40h160v-30.77h240V-760h160v40h-40v495.38q0 27.62-18.5 46.12Q683-160 655.38-160H304.62ZM680-720H280v495.38q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h350.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93V-720ZM392.31-280h40v-360h-40v360Zm135.38 0h40v-360h-40v360ZM280-720v520-520Z">
+							</path>
+						</svg>
+					</div>
+					<div class="task-project"># Inbox</div>
+				</div>
+			</div>
+			<div class="line"></div>
 		</div>
-	</div>
-	<div class="main-content">
 	</div>
 </body>
 
@@ -138,3 +124,13 @@
 					<img src="./assets/icons/sun.svg" alt="Light mode" class="theme-icon sun-icon">
 					<img src="./assets/icons/moon.svg" alt="Dark mode" class="theme-icon moon-icon">
 				</button> -->
+
+<!-- <svg id="darkModeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+				class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
+				<path
+					d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278">
+				</path>
+				<path
+					d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.73 1.73 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.73 1.73 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.73 1.73 0 0 0 1.097-1.097zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z">
+				</path>
+			</svg> -->
