--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
 						<div class="title">Instructions</div>
 					</div>
 					<div class="task-head-right">
-						<div>Urgent</div>
+						<div class="priority">Urgent</div>
 						<div>5 June 2025</div>
 					</div>
 				</div>
-				<div class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+				<div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
 					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
 				</div>
 				<div class="task-bottom">
@@ -55,11 +55,11 @@
 						<div class="title">Instructions</div>
 					</div>
 					<div class="task-head-right">
-						<div>Urgent</div>
+						<div class="priority">Urgent</div>
 						<div>5 June 2025</div>
 					</div>
 				</div>
-				<div class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+				<div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
 					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
 				</div>
 				<div class="task-bottom">
@@ -88,11 +88,77 @@
 						<div class="title">Instructions</div>
 					</div>
 					<div class="task-head-right">
-						<div>Urgent</div>
+						<div class="priority">Urgent</div>
 						<div>5 June 2025</div>
 					</div>
 				</div>
-				<div class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+				<div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
+				</div>
+				<div class="task-bottom">
+					<div class="task-options">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M200-200h43.92l427.93-427.92-43.93-43.93L200-243.92V-200Zm-40 40v-100.77l527.23-527.77q6.15-5.48 13.57-8.47 7.43-2.99 15.49-2.99t15.62 2.54q7.55 2.54 13.94 9.15l42.69 42.93q6.61 6.38 9.04 14 2.42 7.63 2.42 15.25 0 8.13-2.74 15.56-2.74 7.42-8.72 13.57L260.77-160H160Zm600.77-556.31-44.46-44.46 44.46 44.46ZM649.5-649.5l-21.58-22.35 43.93 43.93-22.35-21.58Z">
+							</path>
+						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M304.62-160q-26.85 0-45.74-18.88Q240-197.77 240-224.62V-720h-40v-40h160v-30.77h240V-760h160v40h-40v495.38q0 27.62-18.5 46.12Q683-160 655.38-160H304.62ZM680-720H280v495.38q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h350.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93V-720ZM392.31-280h40v-360h-40v360Zm135.38 0h40v-360h-40v360ZM280-720v520-520Z">
+							</path>
+						</svg>
+					</div>
+					<div class="task-project"># Inbox</div>
+				</div>
+			</div>
+			<div class="line"></div>
+			<div class="task">
+				<div class="task-head">
+					<div class="task-head-left">
+						<input type="checkbox">
+						<div class="title">Instructions</div>
+					</div>
+					<div class="task-head-right">
+						<div class="priority">Urgent</div>
+						<div>5 June 2025</div>
+					</div>
+				</div>
+				<div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
+					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
+				</div>
+				<div class="task-bottom">
+					<div class="task-options">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M200-200h43.92l427.93-427.92-43.93-43.93L200-243.92V-200Zm-40 40v-100.77l527.23-527.77q6.15-5.48 13.57-8.47 7.43-2.99 15.49-2.99t15.62 2.54q7.55 2.54 13.94 9.15l42.69 42.93q6.61 6.38 9.04 14 2.42 7.63 2.42 15.25 0 8.13-2.74 15.56-2.74 7.42-8.72 13.57L260.77-160H160Zm600.77-556.31-44.46-44.46 44.46 44.46ZM649.5-649.5l-21.58-22.35 43.93 43.93-22.35-21.58Z">
+							</path>
+						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+							fill="#e8eaed">
+							<path
+								d="M304.62-160q-26.85 0-45.74-18.88Q240-197.77 240-224.62V-720h-40v-40h160v-30.77h240V-760h160v40h-40v495.38q0 27.62-18.5 46.12Q683-160 655.38-160H304.62ZM680-720H280v495.38q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h350.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93V-720ZM392.31-280h40v-360h-40v360Zm135.38 0h40v-360h-40v360ZM280-720v520-520Z">
+							</path>
+						</svg>
+					</div>
+					<div class="task-project"># Inbox</div>
+				</div>
+			</div>
+			<div class="line"></div>
+			<div class="task">
+				<div class="task-head">
+					<div class="task-head-left">
+						<input type="checkbox">
+						<div class="title">Instructions</div>
+					</div>
+					<div class="task-head-right">
+						<div class="priority">Urgent</div>
+						<div>5 June 2025</div>
+					</div>
+				</div>
+				<div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti
 					molestiae assumenda rerum hic quia. Facere laudantium eos in pariatur laboriosam sapiente illum.
 				</div>
 				<div class="task-bottom">
