feat: add theme toggle feature

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -12,7 +12,8 @@
 	<div class="main-content">
 		<div class="main-head">
 			<h1 class="top2px">All Tasks</h1>
-			<button>Theme Toggle</button>
+			<audio src="./assets/audio/theme-toggle.mp3" class="switch-audio" preload="auto"></audio>
+			<div class="theme-button"></div>
 		</div>
 		<div class="task-list">
 			<div class="task">
@@ -184,19 +185,4 @@
 	</div>
 </body>
 
-
-
-<!-- <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
-					<img src="./assets/icons/sun.svg" alt="Light mode" class="theme-icon sun-icon">
-					<img src="./assets/icons/moon.svg" alt="Dark mode" class="theme-icon moon-icon">
-				</button> -->
-
-<!-- <svg id="darkModeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-				class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
-				<path
-					d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278">
-				</path>
-				<path
-					d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.73 1.73 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.73 1.73 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.73 1.73 0 0 0 1.097-1.097zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z">
-				</path>
-			</svg> -->
+</html>
