feat: add sound effect when tab is switched

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-	<div class="side-bar"></div>
+	<div class="side-bar">
+		<audio src="./assets/audio/double-click.mp3" class="double-click" preload="auto"></audio>
+	</div>
 	<div class="main-content">
 		<div class="main-head">
 			<h1 class="top2px">All Tasks</h1>
