feat: implement dynamic rendering of tasks with js
- the tasks in the projects are now dynamically rendered on tab switch
  to one of the proejct tab

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	</div>
 	<div class="main-content">
 		<div class="main-head">
-			<h1 class="top2px">All Tasks</h1>
+			<h1 class="top2px"></h1>
 			<audio src="./assets/audio/theme-toggle.mp3" class="switch-audio" preload="auto"></audio>
 			<div class="theme-button"></div>
 		</div>
